yaml-examples/komga/komga-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: komga
  namespace: default
  labels:
    app: komga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: komga
  template:
    metadata:
      labels:
        app: komga
    spec:
      containers:
      - name: komga
        image: gotson/komga
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        volumeMounts:
          - mountPath: /config
            name: config
          - mountPath: /comics
            name: comics
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: komga
        - name: comics
          hostPath:
            path: /mnt/share/Comics
